Add variable validation

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,22 @@
 ---
 
+- name: 'Check mandatory variables are defined'
+  assert:
+    that:
+      - application_name is defined
+      - cloudwatch_region is defined
+      - cloudwatch_log_group is defined
+      - database_url is defined
+      - notifications_service_endpoint is defined
+      - user_info_service_endpoint is defined
+      - journaling_service_endpoint is defined
+      - images_service_endpoint is defined
+      - database_container_name is defined
+      - database_user is defined
+      - database_password is defined
+      - dump_day is defined
+
+
 - name: Create the files directory
   file:
     path: "{{ hostvars[inventory_hostname].working_directory }}{{ application_name }}/files"
