--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,7 +7,7 @@
       - loki_url is defined
       - database_url is defined
       - notifications_service_endpoint is defined
-      - domain_name is defined
+      - host_port is defined
       - user_info_service_endpoint is defined
       - journaling_service_endpoint is defined
       - images_service_endpoint is defined
@@ -38,17 +38,14 @@
       - name: "pomerium"
     exposed_ports:
       - "80"
+    published_ports:
+      - "0.0.0.0:{{ host_port }}:80"
     env:
       DATABASE_URL: "{{ database_url }}"
       NOTIFICATIONS_SERVICE_ENDPOINT: "{{ notifications_service_endpoint }}"
       IMAGES_SERVICE_ENDPOINT: "{{ images_service_endpoint }}"
       JOURNALING_SERVICE_ENDPOINT: "{{ journaling_service_endpoint }}"
       USER_INFO_SERVICE_ENDPOINT: "{{ user_info_service_endpoint }}"
-      VIRTUAL_HOST: "{{ domain_name }}"
-      VIRTUAL_PATH: "{{ subpath }}"
-      VIRTUAL_DEST: "/"
-      LETSENCRYPT_HOST: "{{ domain_name }}"
-      VIRTUAL_PORT: "80"
 
 - name: Create database
   include_role:
